# ativayeban

./: .gitignore  CMakeLists.txt  COPYRIGHT  Makefile  README.md  animation.c  animation.h  bg.c  bg.h  block.c  block.h  box.c  box.h  c_array.c  camera.c  camera.h  cfgpath.h  draw.c  draw.h  game.c  game.h  gap.c  gap.h  high_score.c  high_score.h  init.c  init.h  input.c  input.h  main.c  main.h  particle.c  particle.h  pickup.c  pickup.h  platform.h  player.c  player.h  score.c  score.h  (+12 more)
chipmunk/include/chipmunk/: chipmunk_types.h
chipmunk/src/: CMakeLists.txt  cpSpace.c  cpSpaceStep.c
data/: default.gcw0.desktop
pkg/: default.gcw0.desktop  make_opk.sh
pkg/linux/: io.github.cxong.fallingtime.desktop
pkg/macosx/: icon.icns
platform/: general.c  opendingux.c
